//
//  AccessibilityIdentifier.swift
//  YrtOS
//
//  Created by Lorenz Simon on 01.05.24.
//

import Foundation

enum AccessibilityIdentifier {
    enum ControlBarView {
        static let searchShowButton = "\(Self.self)ButtonSearchShow"
        static let searchHideButton = "\(Self.self)ButtonSearchHide"
        static let searchTextField = "\(Self.self)TextFieldSearch"
    }
}
